Fixed some of the spacing for right-side nav bar

--- a/react-app/src/components/Search/Search.css
+++ b/react-app/src/components/Search/Search.css
@@ -9,7 +9,7 @@
 	position: relative;
 	overflow: hidden;
 	font-family: Mukta, sans-serif;
-	/* background-color: rgb(31, 31, 31); */
+	background-color: rgb(31, 31, 31);
 }
 
 #search-input {
@@ -66,7 +66,6 @@
 }
 
 #search-populated-container {
-	/* overflow-x: hidden; */
 	grid-row: 2;
 	width: 80vw;
 	padding: 15px;
